Added proxy launch check during app start. Added proxy status.