@@ -3,13 +3,13 @@ package com.lymbin.proxyinterceptor;
 import java.io.BufferedReader;
 import java.io.DataOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
 
-public class SudoWorker {
-    public static void sudo(String... strings) {
+class SudoWorker {
+    static void sudo(String... strings) {
         try {
             Process su = Runtime.getRuntime().exec("su");
-
             DataOutputStream outputStream = new DataOutputStream(su.getOutputStream());
 
             for (String s : strings) {
@@ -30,35 +30,23 @@ public class SudoWorker {
         }
     }
 
-    public static String sudoWithReturn(String string) {
-        // TODO: make this work
-        String result = "";
+    static String sudoWithReturn(String string) {
         try {
-            ProcessBuilder builder = new ProcessBuilder("su");
-            builder.redirectErrorStream(true);
-
-            Process su = builder.start();
-
+            Process su = Runtime.getRuntime().exec(new String[]{"su", "-c", string});
             DataOutputStream outputStream = new DataOutputStream(su.getOutputStream());
             BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(su.getInputStream()));
 
-            outputStream.writeBytes(string + "\n");
-            outputStream.flush();
+            StringBuilder result = new StringBuilder();
             String line;
-            char[] buffer = new char[1024];
-            bufferedReader.read(buffer);
-
             while ((line = bufferedReader.readLine()) != null)
-                result += line;
-
-            outputStream.writeBytes("exit\n");
-            outputStream.flush();
-
+                result.append(line);
 
             outputStream.close();
+
+            return result.toString();
         } catch (IOException e) {
             e.printStackTrace();
         }
-        return result;
+        return "";
     }
 }
